--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 This is a test repository to experiment with git hooks. Nothing of value will be stored here.
 
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
+ABCDEFGHIJKLMjOPQRSTUVWXYZA
+Type this line
