test [hours:2] [milestone:3] [task:5]

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 This is a test repository to experiment with git hooks. Nothing of value will be stored here.
 
-ABCDEFGHIJKLMjOPQRSTUVWXYZABC
+ABCDEFGHIJKLMjOPQRSTUVWXYZABCD
+Hi
+Hie
+New line
 Type this line
