--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This is a test repository to experiment with git hooks. Nothing of value will be stored here.
 
 ABCDEFGHIJKLMjOPQRSTUVWXYZABCDEF
+
+Hello
